--- a/app/index.html
+++ b/app/index.html
@@ -60,12 +60,12 @@
             </header>
             <section class="provider">
                 <h1 class="provider__title">you legal solutions provider</h1>
-                    <button class="provider__btn" type="button">
+                    <a class="provider__btn" href="#services">
                         <svg class="provider__btn-arrow" width="20" height="12" viewBox="0 0 20 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1 1L10 10L19 1" stroke="white" stroke-width="2"/>
                         </svg>
                         <span class="provider__btn-circuit">1</span>
-                    </button>
+                    </a>
             </section>
             <section class="category">
                 <div class="category__item">
@@ -79,7 +79,7 @@
                     <p class="category__info-text">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.</p>
                 </div>
             </section>
-            <section class="services">
+            <section class="services" id="services">
                 <a class="services__link" href="services.html">services
                     <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
