Add visually-hidden for coment block

--- a/app/IT-and-e-commerce.html
+++ b/app/IT-and-e-commerce.html
@@ -152,7 +152,7 @@
                     </div>
                     <div class="publication__list-body publication__list-body--disable">
                         <article class="publication__list-card">
-                            <!-- <img class="publication__list-pic img-resonsive" src="./img/publication/Publication-1.jpg" alt="Publication-1"> -->
+                            <img class="publication__list-pic img-resonsive visually-hidden" src="./img/publication/Publication-1.jpg" alt="Publication-1">
                             <div class="publication__list-content">
                                 <a href="#" class="publication__list-link">Currency control is dead, long live currency control!</a>
                                 <p class="publication__list-date">June 14, 2018</p>
