--- a/app/services.html
+++ b/app/services.html
@@ -59,11 +59,11 @@
                 </div>
             </header>
             <section class="services">
-                <!-- <a class="services__link" href="">services
+                <a class="services__link visually-hidden" href="">services
                     <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
                     </svg>
-                </a> -->
+                </a>
                 <h2 class="services__title">What can we do better than others?</h2>
                 <div class="services__list">
                     <article class="services__list-card">
