--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
                     <a href="index.html">
                         <img class="header__logo" src="./img/Logo.jpg" alt="logo">
                     </a>
-                    <!-- <div class="header__logo-page">about us</div> -->
+                    <div class="header__logo-page visually-hidden">about us</div>
                 </div>
                 <div class="header__menu">
                     <button class="header__menu-btn" type="button">
@@ -64,7 +64,7 @@
                         <svg class="provider__btn-arrow" width="20" height="12" viewBox="0 0 20 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1 1L10 10L19 1" stroke="white" stroke-width="2"/>
                         </svg>
-                        <span class="provider__btn-circuit">0</span>
+                        <span class="provider__btn-circuit">1</span>
                     </a>
             </section>
             <section class="category">
@@ -199,7 +199,7 @@
         </section>
         <section class="publication">
             <div class="publication__body container">
-                <a href="" class="publication__link">Publications
+                <a href="publications.html" class="publication__link">Publications
                     <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
                     </svg>
