add slider for about.html and index.html

--- a/app/about.html
+++ b/app/about.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="body">
     <header class="header header--white container">
@@ -124,32 +126,33 @@
                     <div class="achievements__list">
                         <div class="achievements__list-body">
                             <article class="achievements__list-card">
-                                <img class="img-resonsive achievements__list-img" src="./img/aboutus/Achievment-1.png" alt="achievements-1">
+                                <img class="img-resonsive achievements__list-img" src="./img/aboutus/Achievment-1.png">
                             </article>
                         </div>
                         <div class="achievements__list-body">
-                            <article class="achievements__list-card achievements__list-card--disable">
-                                <img class="img-resonsive achievements__list-img" src="./img/aboutus/Achievment-2.png" alt="achievements-2">
+                            <article class="achievements__list-card">
+                                <img class="img-resonsive achievements__list-img" src="./img/aboutus/Achievment-2.png">
                             </article>
                         </div>
                         <div class="achievements__list-body">
-                            <article class="achievements__list-card achievements__list-card--disable">
-                                <img class="img-resonsive achievements__list-img" src="./img/aboutus/Achievment-3.png" alt="achievements-3">
+                            <article class="achievements__list-card">
+                                <img class="img-resonsive achievements__list-img"  src="./img/aboutus/Achievment-3.png">
                             </article>
                         </div>
                         <div class="achievements__list-body">
-                            <article class="achievements__list-card achievements__list-card--disable">
-                                <img class="img-resonsive achievements__list-img" src="./img/aboutus/Achievment-4.png" alt="achievements-4">
+                            <article class="achievements__list-card">
+                                <img class="img-resonsive achievements__list-img"  src="./img/aboutus/Achievment-4.png">
                             </article>
                         </div>
-                    </div>
-                    <div class="achievements__btn">
-                        <button class="achievements__btn-item achievements__btn--active" type="button">1</button>
-                        <button class="achievements__btn-item" type="button">2</button>
-                        <button class="achievements__btn-item" type="button">3</button>
-                        <button class="achievements__btn-item achievements__btn--disable" type="button">4</button>
-                        <button class="achievements__btn-item achievements__btn--disable" type="button">5</button>
-                        <button class="achievements__btn-item achievements__btn--disable" type="button">6</button>
+                        <div class="achievements__list-body">
+                            <article class="achievements__list-card">
+                                <img class="img-resonsive achievements__list-img"  src="./img/aboutus/Achievment-3.png">
+                            </article>
+                        </div>
+                        <div class="achievements__list-body">
+                            <article class="achievements__list-card">
+                                <img class="img-resonsive achievements__list-img"  src="./img/aboutus/Achievment-4.png">
+                            </article>
                     </div>
                 </div>
             </div>
@@ -177,5 +180,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
