--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="body">
     <div class="gradient-wrapper">
@@ -134,28 +136,41 @@
         </div>
     </div>
     <main class="main">
-        <section class="team container">
-            <article class="team__body">
-                <div class="team__pic">
-                    <img class="team__pic-img img-resonsive" src="./img/Team-1.jpg" alt="face">
-                </div>
-                <div class="team__content">
-                    <a class="team__content-link" href="./team.html">команда
-                        <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
-                        </svg>
-                    </a>
-                    <h3 class="team__content-title">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.</h3>
-                    <p class="team__content-name">Олександр Олександровський</p>
-                    <p class="team__content-job">Керуючий партнер</p>
-                </div>
-            </article>
-            <div class="team__btn">
-                <button class="team__btn-item team__btn--active" type="button">1</button>
-                <button class="team__btn-item" type="button">2</button>
-                <button class="team__btn-item" type="button">3</button>
-            </div>
-        </section>
+        <div class="container">
+            <section class="team ">
+                <article class="team__body">
+                    <div class="team__pic">
+                        <img class="team__pic-img img-resonsive" src="./img/Team-1.jpg" srcset="./img/team/Team-1@2x.jpg" alt="face">
+                    </div>
+                    <div class="team__content">
+                        <a class="team__content-link" href="./team.html">команда
+                            <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
+                            </svg>
+                        </a>
+                        <h3 class="team__content-title">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.</h3>
+                        <p class="team__content-name">Олександр Олександровський</p>
+                        <p class="team__content-job">Керуючий партнер</p>
+                    </div>
+                </article>
+                <article class="team__body">
+                    <div class="team__pic">
+                        <img class="team__pic-img img-resonsive" src="./img/Team-5.jpg" srcset="./img/team/Team-5@2x.jpg" alt="face">
+                    </div>
+                    <div class="team__content">
+                        <a class="team__content-link" href="./team.html">команда
+                            <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
+                            </svg>
+                        </a>
+                        <h3 class="team__content-title">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.</h3>
+                        <p class="team__content-name">Oksana Kobzar</p>
+                        <p class="team__content-job">Equity partner, Attorney-at-law</p>
+                    </div>
+                </article>
+                
+            </section>
+        </div>
         <section class="trust">
             <h2 class="trust__title">They already trust us</h2>
             <div class="trust__list">
@@ -291,6 +306,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
