--- a/app/team.html
+++ b/app/team.html
@@ -64,7 +64,7 @@
             <div class="container">
                 <div class="guys__list">
                     <article class="guys__list-card">
-                        <img class="guys__list-img img-resonsive" src="./img/team/Team-1.jpg" alt="">
+                        <img class="guys__list-img img-resonsive" src="./img/team/Team-1.jpg" srcset="./img/team/Team-1@2x.jpg" alt="">
                         <div class="guys__content">
                             <div class="guys__content-item">
                                 <p class="guys__content-name">Alexander Alexandrovsky</p>
@@ -78,7 +78,7 @@
                         </div>
                     </article>
                     <article class="guys__list-card">
-                        <img class="guys__list-img img-resonsive" src="./img/team/Team-2.jpg" alt="Team-2">
+                        <img class="guys__list-img img-resonsive" src="./img/team/Team-2.jpg" srcset="./img/team/Team-2@2x.jpg" alt="Team-2">
                         <div class="guys__content">
                             <div class="guys__content-item">
                                 <p class="guys__content-name">Евгений Патриков</p>
@@ -92,7 +92,7 @@
                         </div>
                     </article>
                     <article class="guys__list-card">
-                        <img class="guys__list-img img-resonsive" src="./img/team/Team-3.jpg" alt="Team-3">
+                        <img class="guys__list-img img-resonsive" src="./img/team/Team-3.jpg" srcset="./img/team/Team-3@2x.jpg" alt="Team-3">
                         <div class="guys__content">
                             <div class="guys__content-item">
                                 <p class="guys__content-name">Vladislav Melnik</p>
@@ -106,7 +106,7 @@
                         </div>
                     </article>
                     <article class="guys__list-card">
-                        <img class="guys__list-img img-resonsive" src="./img/team/Team-4.jpg" alt="Team-4">
+                        <img class="guys__list-img img-resonsive" src="./img/team/Team-4.jpg" srcset="./img/team/Team-4@2x.jpg" alt="Team-4">
                         <div class="guys__content">
                             <div class="guys__content-item">
                                 <p class="guys__content-name">Sergey Binn</p>
@@ -120,7 +120,7 @@
                         </div>
                     </article>
                     <article class="guys__list-card">
-                        <img class="guys__list-img img-resonsive" src="./img/team/Team-5.jpg" alt="Team-5">
+                        <img class="guys__list-img img-resonsive" src="./img/team/Team-5.jpg" srcset="./img/team/Team-5@2x.jpg" alt="Team-5">
                         <div class="guys__content">
                             <div class="guys__content-item">
                                 <p class="guys__content-name">Oksana Kobzar</p>
@@ -134,7 +134,7 @@
                         </div>
                     </article>
                     <article class="guys__list-card">
-                        <img class="guys__list-img img-resonsive" src="./img/team/Team-6.jpg" alt="Team-6">
+                        <img class="guys__list-img img-resonsive" src="./img/team/Team-6.jpg" srcset="./img/team/Team-6@2x.jpg" alt="Team-6">
                         <div class="guys__content">
                             <div class="guys__content-item">
                                 <p class="guys__content-name">Julia Wolk</p>
