fixed container on page

--- a/app/gdpr.html
+++ b/app/gdpr.html
@@ -114,73 +114,75 @@
             </section>
         </div>
         <section class="publication">
-            <div class="publication__body container">
-                <a href="" class="publication__link">Publications
-                    <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
-                    </svg>
-                </a>
-                <h2 class="publication__title">We have something to tell</h2>
-                <div class="publication__list">
-                    <div class="publication__list-body">
-                        <article class="publication__list-card">
-                            <img class="publication__list-pic img-resonsive" src="./img/publication/Publication-1.jpg" alt="Publication-1" srcset="./img/publication/Publication-1@2x.jpg 2x">
-                            <div class="publication__list-content">
-                                <a href="#" class="publication__list-link">Equity associate</a>
-                                <p class="publication__list-date">April 22</p>
-                                <p class="publication__list-text">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="publication__list-body">
-                        <article class="publication__list-card">
-                            <img class="publication__list-pic img-resonsive" src="./img/publication/Publication-2.jpg" srcset="./img/publication/Publication-2@2x.jpg 2x" alt="Publication-2">
-                            <div class="publication__list-content">
-                                <a href="#" class="publication__list-link">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</a>
-                                <p class="publication__list-date">September 29</p>
-                                <p class="publication__list-text">And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="publication__list-body publication__list-body--media">
-                        <article class="publication__list-card">
-                            <img class="publication__list-pic img-resonsive" src="./img/publication/Publication-3.jpg" srcset="./img/publication/Publication-3@2x.jpg 2x" alt="Publication-3">
-                            <div class="publication__list-content">
-                                <a href="#" class="publication__list-link">Millennial Testament</a>
-                                <p class="publication__list-date">August 19</p>
-                                <p class="publication__list-text">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="publication__list-body publication__list-body--disable">
-                        <article class="publication__list-card">
-                            <img class="publication__list-pic img-resonsive" src="./img/publication/Publication-4.jpg" srcset="./img/publication/Publication-4@2x.jpg 2x" alt="Publication-4">
-                            <div class="publication__list-content">
-                                <a href="#" class="publication__list-link">Language Law: How to Make Your Website Relevant</a>
-                                <p class="publication__list-date">August 19</p>
-                                <p class="publication__list-text">Natalia Kyryk, head of content studio Wordfactory.ua First, it's beautiful! This is the number one argument in favor of the Ukrainian-language site. Secondly, it is effective. IN…</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="publication__list-body publication__list-body--disable">
-                        <article class="publication__list-card ">
-                            <img class="publication__list-pic img-resonsive" src="./img/publication/Publication-5.jpg" srcset="./img/publication/Publication-5@2x.jpg 2x" alt="Publication-5">
-                            <div class="publication__list-content">
-                                <a href="#" class="publication__list-link">Reimbursement of the child's tuition fees in kindergarten and school</a>
-                                <p class="publication__list-date">February 5, 2018</p>
-                                <p class="publication__list-text">What we are talking about In June this year, the Verkhovna Rada amended the Tax Code of Ukraine. From now on, parents who receive an official…</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="publication__list-body publication__list-body--disable">
-                        <article class="publication__list-card">
-                            <img class="publication__list-pic img-resonsive visually-hidden" src="./img/publication/Publication-1.jpg" alt="Publication-1">
-                            <div class="publication__list-content">
-                                <a href="#" class="publication__list-link">Currency control is dead, long live currency control!</a>
-                                <p class="publication__list-date">June 14, 2018</p>
-                                <p class="publication__list-text">Experts hold conferences, round tables and other events on "liberalization of currency legislation." Lawyers-experts-novelists rub their fingers about "ctrl + c / ctrl + v".</p>
-                            </div>
-                        </article>
+            <div class="container">
+                <div class="publication__body">
+                    <a href="" class="publication__link">Publications
+                        <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
+                        </svg>
+                    </a>
+                    <h2 class="publication__title">We have something to tell</h2>
+                    <div class="publication__list">
+                        <div class="publication__list-body">
+                            <article class="publication__list-card">
+                                <img class="publication__list-pic img-resonsive" src="./img/publication/Publication-1.jpg" alt="Publication-1" srcset="./img/publication/Publication-1@2x.jpg 2x">
+                                <div class="publication__list-content">
+                                    <a href="#" class="publication__list-link">Equity associate</a>
+                                    <p class="publication__list-date">April 22</p>
+                                    <p class="publication__list-text">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…</p>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="publication__list-body">
+                            <article class="publication__list-card">
+                                <img class="publication__list-pic img-resonsive" src="./img/publication/Publication-2.jpg" srcset="./img/publication/Publication-2@2x.jpg 2x" alt="Publication-2">
+                                <div class="publication__list-content">
+                                    <a href="#" class="publication__list-link">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</a>
+                                    <p class="publication__list-date">September 29</p>
+                                    <p class="publication__list-text">And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="publication__list-body publication__list-body--media">
+                            <article class="publication__list-card">
+                                <img class="publication__list-pic img-resonsive" src="./img/publication/Publication-3.jpg" srcset="./img/publication/Publication-3@2x.jpg 2x" alt="Publication-3">
+                                <div class="publication__list-content">
+                                    <a href="#" class="publication__list-link">Millennial Testament</a>
+                                    <p class="publication__list-date">August 19</p>
+                                    <p class="publication__list-text">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="publication__list-body publication__list-body--disable">
+                            <article class="publication__list-card">
+                                <img class="publication__list-pic img-resonsive" src="./img/publication/Publication-4.jpg" srcset="./img/publication/Publication-4@2x.jpg 2x" alt="Publication-4">
+                                <div class="publication__list-content">
+                                    <a href="#" class="publication__list-link">Language Law: How to Make Your Website Relevant</a>
+                                    <p class="publication__list-date">August 19</p>
+                                    <p class="publication__list-text">Natalia Kyryk, head of content studio Wordfactory.ua First, it's beautiful! This is the number one argument in favor of the Ukrainian-language site. Secondly, it is effective. IN…</p>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="publication__list-body publication__list-body--disable">
+                            <article class="publication__list-card ">
+                                <img class="publication__list-pic img-resonsive" src="./img/publication/Publication-5.jpg" srcset="./img/publication/Publication-5@2x.jpg 2x" alt="Publication-5">
+                                <div class="publication__list-content">
+                                    <a href="#" class="publication__list-link">Reimbursement of the child's tuition fees in kindergarten and school</a>
+                                    <p class="publication__list-date">February 5, 2018</p>
+                                    <p class="publication__list-text">What we are talking about In June this year, the Verkhovna Rada amended the Tax Code of Ukraine. From now on, parents who receive an official…</p>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="publication__list-body publication__list-body--disable">
+                            <article class="publication__list-card">
+                                <img class="publication__list-pic img-resonsive visually-hidden" src="./img/publication/Publication-1.jpg" alt="Publication-1">
+                                <div class="publication__list-content">
+                                    <a href="#" class="publication__list-link">Currency control is dead, long live currency control!</a>
+                                    <p class="publication__list-date">June 14, 2018</p>
+                                    <p class="publication__list-text">Experts hold conferences, round tables and other events on "liberalization of currency legislation." Lawyers-experts-novelists rub their fingers about "ctrl + c / ctrl + v".</p>
+                                </div>
+                            </article>
+                        </div>
                     </div>
                 </div>
             </div>
