fixed fileds for prodaction

--- a/app/index.html
+++ b/app/index.html
@@ -168,7 +168,7 @@
                         <p class="team__content-job">Equity partner, Attorney-at-law</p>
                     </div>
                 </article>
-                
+
             </section>
         </div>
         <section class="trust">
@@ -309,6 +309,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/all.min.js"></script>
 </body>
 </html>
 
