--- a/app/about.html
+++ b/app/about.html
@@ -183,5 +183,6 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/all.min.js"></script>
 </body>
 </html>
